--- a/desafio/d014/d014.html
+++ b/desafio/d014/d014.html
@@ -25,6 +25,9 @@
             padding: 10px;
             text-align: center;
         }
+        td.dados{
+            background-color: grey;
+        }
                  
     </style>
 </head>
@@ -69,7 +72,7 @@
      </tr>
      <tr>
         <th colspan="8">Media de Exatas</th>
-        <td colspan="2">00</td>
+        <td class="dados" colspan="2">00</td>
      </tr>
      <tr>
         <td rowspan="2">Humanas</td>
@@ -86,7 +89,7 @@
      </tr>
      <tr>
         <th colspan="8"> Media de Humanas</th>
-        <td colspan="2">00</td>
+        <td class="dados" colspan="2">00</td>
      </tr>
 </table>
 </body>
