--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -19,7 +19,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum earum amet officia officiis, quidem vero rerum labore? Ex commodi suscipit excepturi. Dicta ducimus soluta assumenda commodi beatae, repudiandae consequatur voluptate!</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extra/pagina001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita atque ex earum? Veritatis adipisci ad alias, magni odio ducimus aliquid sunt molestias reprehenderit maxime assumenda illum fugiat ipsum, qui perferendis!</p>
 </body>
