atualização  de iframe exe 0024

--- a/exercicios/ex024/iframe004.html
+++ b/exercicios/ex024/iframe004.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Meu site principal</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod eos at ab corrupti labore nisi sed iusto numquam sint repudiandae! Necessitatibus fuga doloribus dicta. Nam error molestias placeat ullam amet?</p>
-    <iframe src="paginas-extra/paginas004.html">
+    <iframe src="paginas-extra/paginas004.html" sandbox="sandbox" referrerpolicy="no-referrer">
         Seu navegador não é compatível com isso...
     </iframe>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi temporibus modi consequuntur voluptatibus dignissimos non cupiditate quo dolore hic eveniet autem, ex possimus voluptate reiciendis magnam exercitationem error perferendis eaque.</p>
