botões para redes sociais

--- a/desafio/projeto-redesocial/index.html
+++ b/desafio/projeto-redesocial/index.html
@@ -16,7 +16,12 @@
  0       </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="GitHub"></a>
         </section>
     </main>
 </body>
