--- a/desafio/projeto-redesocial/home.html
+++ b/desafio/projeto-redesocial/home.html
@@ -17,6 +17,11 @@
         background: black url('pacote-d013/imagens/tela-home.jpg') no-repeat top center;
         background-size: cover;
     }
+
+    ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+    }        
 </style>
 <body>
     
