--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Meu primeiro formulario</h1>
-    <form action="cadastro.php" autocomplete="off">
+    <form action="cadastro.php" method="get" autocomplete="off">
         <p><label for="inome">Nome</label>:
              <input type="text" nome="nome" id="inome"></p>
         <p><label for="iSobrenome">Sobrenome</label>:
