--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilo/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
+    <main>
     <h1>Teste media Queries</h1>
-    <img src="imagem/icon-phone.png" alt="Acessando via smartphone">
-    <img src="imagem/icon-tablet.png" alt="Acessando via tablet">
-    <img src="imagem/icon-print.png" alt="versão para impressão">
-    <img src="imagem/icon-pc.png" alt="versão para desktop">
-    <img src="imagem/icon-tv.png" alt="versão para tv">
+
+    <img id="phone" src="imagem/icon-phone.png" alt="Acessando via smartphone">
+    <img id="tablet" src="imagem/icon-tablet.png" alt="Acessando via tablet">
+    <img id="print" src="imagem/icon-print.png" alt="versão para impressão">
+    <img id="pc" src="imagem/icon-pc.png" alt="versão para desktop">
+    <img id="tv" src="imagem/icon-tv.png" alt="versão para tv">
+    </main>
 </body>
 </html>
