--- a/desafio/projeto-login/index.html
+++ b/desafio/projeto-login/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href= "estilo/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
        
 </head>
 <body>
    <main>
         <section id="login">
             <div id="imagem">
-                foto
+                <!--Aqui vai a imagem nas CSS-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>.
