--- a/desafio/projeto-login/index.html
+++ b/desafio/projeto-login/index.html
@@ -16,25 +16,26 @@
                 <!--Aqui vai a imagem nas CSS-->
             </div>
             <div id="formulario">
-                <h1>Login</h1>.
+                <h1>Login</h1>
                 <p>Seja bem-vido(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post">
                     <div class="campo">
                         <span class="material-symbols-outlined">person</span> 
-                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete=" email" required maxlength="30">
-                        <label for="ilogin">Login</label>                                     </div>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>                   
+                    </div>
                         <div class="campo">
                             <span class="material-symbols-outlined">vpn_key</span>
                             <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                             <label for="isenha">Senha</label>
                         </div>
                         <input type="submit" value="Entrar">
-                        <a href="esqueci.html">
+                        <a href="esqueci.html" class="botao">
                             Esqueci a senha <span class="material-symbols-outlined">mail</span>
                         </a>
 
 
-                </form>
+                </form> 
             </div>
         </section>
    </main> 
